workspace-sf/force-app/main/default/objects/Pagamento__x/Pagamento__x.object-meta.xml
<CustomObject>
    <description>public$pagamento</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>public$pagamento</externalName>
    <externalRepository>Id</externalRepository>
    <label>Pagamento</label>
    <pluralLabel>Pagamentos</pluralLabel>
</CustomObject>