workspace-sf/force-app/main/default/objects/Pagamento__x/fields/CnpjCpf__c.field-meta.xml
<CustomField>
    <fullName>CnpjCpf__c</fullName>
    <externalDeveloperName>cnpjcpf</externalDeveloperName>
    <label>CPF / CNPJ</label>
    <length>22</length>
    <type>Text</type>
</CustomField>