workspace-sf/force-app/main/default/objects/Pagamento__x/fields/CodigoExcecao__c.field-meta.xml
<CustomField>
    <fullName>CodigoExcecao__c</fullName>
    <externalDeveloperName>codigoexcecao</externalDeveloperName>
    <label>Código exceção</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>