workspace-sf/force-app/main/default/objects/Pagamento__x/fields/CodigoMunicipio__c.field-meta.xml
<CustomField>
    <fullName>CodigoMunicipio__c</fullName>
    <externalDeveloperName>codigomunicipio</externalDeveloperName>
    <label>Código Município</label>
    <length>20</length>
    <type>Text</type>
</CustomField>