workspace-sf/force-app/main/default/objects/Pagamento__x/fields/CodigoServico__c.field-meta.xml
<CustomField>
    <fullName>CodigoServico__c</fullName>
    <externalDeveloperName>codigoservico</externalDeveloperName>
    <label>Códígo Serviço</label>
    <length>20</length>
    <type>Text</type>
</CustomField>