workspace-sf/force-app/main/default/objects/Pagamento__x/fields/DataAualizacao__c.field-meta.xml
<CustomField>
    <fullName>DataAualizacao__c</fullName>
    <externalDeveloperName>dataatualizacao</externalDeveloperName>
    <label>Data atualização</label>
    <type>Date</type>
</CustomField>