workspace-sf/force-app/main/default/objects/Pagamento__x/fields/DataCancelamento__c.field-meta.xml
<CustomField>
    <fullName>DataCancelamento__c</fullName>
    <externalDeveloperName>datacancelamento</externalDeveloperName>
    <label>Data cancelamento</label>
    <type>Date</type>
</CustomField>