workspace-sf/force-app/main/default/objects/Pagamento__x/fields/DataPagamento__c.field-meta.xml
<CustomField>
    <fullName>DataPagamento__c</fullName>
    <externalDeveloperName>datapagamento</externalDeveloperName>
    <label>Data pagamento</label>
    <type>Date</type>
</CustomField>