workspace-sf/force-app/main/default/objects/Pagamento__x/fields/DataProgramadaPagamento__c.field-meta.xml
<CustomField>
    <fullName>DataProgramadaPagamento__c</fullName>
    <externalDeveloperName>dataprogramadapagamento</externalDeveloperName>
    <label>Data programada pagamento</label>
    <type>Date</type>
</CustomField>