workspace-sf/force-app/main/default/objects/Pagamento__x/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <externalDeveloperName>descricao</externalDeveloperName>
    <label>Descrição</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>