workspace-sf/force-app/main/default/objects/Pagamento__x/fields/DescricaoExcecao__c.field-meta.xml
<CustomField>
    <fullName>DescricaoExcecao__c</fullName>
    <label>Descrição exceção</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>