workspace-sf/force-app/main/default/objects/Pagamento__x/fields/IdConta__c.field-meta.xml
<CustomField>
    <fullName>IdConta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>idconta</externalDeveloperName>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pagamentos</relationshipLabel>
    <relationshipName>Pagamentos</relationshipName>
    <type>Lookup</type>
</CustomField>