workspace-sf/force-app/main/default/objects/Pagamento__x/fields/idObjeto__c.field-meta.xml
<CustomField>
    <fullName>idObjeto__c</fullName>
    <externalDeveloperName>idobjeto</externalDeveloperName>
    <label>id Objeto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>