workspace-sf/force-app/main/default/objects/Pagamento__x/fields/Matricula__c.field-meta.xml
<CustomField>
    <fullName>Matricula__c</fullName>
    <externalDeveloperName>matricula</externalDeveloperName>
    <label>Matricula</label>
    <length>50</length>
    <type>Text</type>
</CustomField>