workspace-sf/force-app/main/default/objects/Pagamento__x/fields/modalidade__c.field-meta.xml
<CustomField>
    <fullName>modalidade__c</fullName>
    <externalDeveloperName>modalidade</externalDeveloperName>
    <label>modalidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>