workspace-sf/force-app/main/default/objects/Pagamento__x/fields/ModalidadeLookup__c.field-meta.xml
<CustomField>
    <fullName>ModalidadeLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modalidade</label>
    <referenceTo>Modalidade__c</referenceTo>
    <relationshipLabel>Pagamentos</relationshipLabel>
    <relationshipName>Pagamentos</relationshipName>
    <type>Lookup</type>
</CustomField>