workspace-sf/force-app/main/default/objects/Pagamento__x/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <externalDeveloperName>motivo</externalDeveloperName>
    <label>Motivo</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>