workspace-sf/force-app/main/default/objects/Pagamento__x/fields/Operacao__c.field-meta.xml
<CustomField>
    <fullName>Operacao__c</fullName>
    <externalDeveloperName>operacao</externalDeveloperName>
    <label>Operação</label>
    <length>4</length>
    <type>Text</type>
</CustomField>