workspace-sf/force-app/main/default/objects/Pagamento__x/fields/SubOperacao__c.field-meta.xml
<CustomField>
    <fullName>SubOperacao__c</fullName>
    <externalDeveloperName>suboperacao</externalDeveloperName>
    <label>Sub Operação</label>
    <length>4</length>
    <type>Text</type>
</CustomField>