workspace-sf/force-app/main/default/objects/Pagamento__x/fields/SusepCorretor__c.field-meta.xml
<CustomField>
    <fullName>SusepCorretor__c</fullName>
    <externalDeveloperName>susepcorretor</externalDeveloperName>
    <label>Susep Corretor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>