workspace-sf/force-app/main/default/objects/Pagamento__x/fields/TipoConta__c.field-meta.xml
<CustomField>
    <fullName>TipoConta__c</fullName>
    <externalDeveloperName>tipoconta</externalDeveloperName>
    <label>Tipo de conta</label>
    <length>10</length>
    <type>Text</type>
</CustomField>