workspace-sf/force-app/main/default/objects/Pagamento__x/fields/TipoPagamento__c.field-meta.xml
<CustomField>
    <fullName>TipoPagamento__c</fullName>
    <externalDeveloperName>tipopagamento</externalDeveloperName>
    <label>Tipo Pagamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>