workspace-sf/force-app/main/default/objects/Pagamento__x/fields/TipoRemuneracao__c.field-meta.xml
<CustomField>
    <fullName>TipoRemuneracao__c</fullName>
    <externalDeveloperName>tiporemuneracao</externalDeveloperName>
    <label>Tipo remuneração</label>
    <length>50</length>
    <type>Text</type>
</CustomField>