workspace-sf/force-app/main/default/objects/Pagamento__x/fields/TipoSinistro__c.field-meta.xml
<CustomField>
    <fullName>TipoSinistro__c</fullName>
    <externalDeveloperName>tiposinistro</externalDeveloperName>
    <label>Tipo Sinistro</label>
    <length>3</length>
    <type>Text</type>
</CustomField>