workspace-sf/force-app/main/default/objects/Pagamento__x/fields/tributacao__c.field-meta.xml
<CustomField>
    <fullName>tributacao__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>tributacao</externalDeveloperName>
    <label>Tributação</label>
    <type>Checkbox</type>
</CustomField>