workspace-sf/force-app/main/default/objects/Pagamento__x/fields/ValorBruto__c.field-meta.xml
<CustomField>
    <fullName>ValorBruto__c</fullName>
    <externalDeveloperName>valorbruto</externalDeveloperName>
    <label>Valor bruto</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>