workspace-sf/force-app/main/default/objects/Pagamento__x/fields/ValorPagamento__c.field-meta.xml
<CustomField>
    <fullName>ValorPagamento__c</fullName>
    <externalDeveloperName>valorpagamento</externalDeveloperName>
    <label>Valor pagamento</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>