workspace-sf/force-app/main/default/objects/Pagamento__x/listViews/PagamentosProLabore.listView-meta.xml
<ListView>
    <fullName>PagamentosProLabore</fullName>
    <columns>ExternalId</columns>
    <columns>Status__c</columns>
    <columns>IdConta__c</columns>
    <columns>DataPagamento__c</columns>
    <columns>ValorPagamento__c</columns>
    <columns>TipoPagamento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TipoPagamento__c</field>
        <operation>equals</operation>
        <value>PRO LABORE</value>
    </filters>
    <label>Pagamentos Pro Labore</label>
    <sharedTo>
        <group>Atendimento</group>
        <group>Emissao</group>
        <group>Operacional</group>
        <role>AnalistaProduto</role>
        <role>CEO</role>
        <role>Coordenador</role>
    </sharedTo>
</ListView>