workspace-sf/force-app/main/default/objects/Pagamento__x/listViews/TodosPagamentos.listView-meta.xml
<ListView>
    <fullName>TodosPagamentos</fullName>
    <columns>ExternalId</columns>
    <columns>Status__c</columns>
    <columns>IdConta__c</columns>
    <columns>DataPagamento__c</columns>
    <columns>ValorPagamento__c</columns>
    <columns>TipoPagamento__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TipoPagamento__c</field>
        <operation>equals</operation>
        <value>prolabore</value>
    </filters>
    <label>Todos os Pagamentos</label>
    <sharedTo>
        <group>Atendimento</group>
        <group>Emissao</group>
        <role>AnalistaProduto</role>
        <roleAndSubordinates>CEO</roleAndSubordinates>
        <roleAndSubordinates>Coordenador</roleAndSubordinates>
    </sharedTo>
</ListView>